--- a/index.html
+++ b/index.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Do Leme ao Pontal</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <h1>Hell de Janeiro</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <title class="game-title">Hell de Janeiro</title>
+  </head>
+  <body>
+      
+    <h1 class="game-title">Hell de Janeiro</h1>
+
     <section class="story-container">
-        <div class="status-container">
-          <ul>
-            <li id="church"></li>
-            <li id="population"></li>
-            <li id="army"></li>
-            <li id="economy"></li>
-          </ul>
-        </div>
-        <div id="main-text" class="decision-text-container"></div>
-        <div id="buttons-container" class="choice-buttons-container">
-          <button id="single-choice-button" class="choice-buttons">
-            Start Game!
-          </button>
-        </div>
-        <div id="input-text-holder" class="form__group"></div>
-      </section>
-  
-      <footer id="player-id" class="player-info">
-        <div id="name-holder"></div>
-        <div id="age-holder"></div>
-      </footer>
-    </body>
-    <script type="text/javascript" src="./js/npcClass.js"></script>
-    <script type="text/javascript" src="./js/kingdomClass.js"></script>
-    <script type="text/javascript" src="./js/gameLoop.js"></script>
+      <div class="status-container">
+        <ul>
+          <li id="savings"></li>
+          <li id="health"></li>
+        </ul>
+      </div>
+      <div id="main-text" class="decision-text-container"></div>
+      <div id="buttons-container" class="choice-buttons-container">
+        <button id="single-choice-button" class="choice-buttons">
+          Start Game!
+        </button>
+      </div>
+    </section>
+  </body>
+    <script type="text/javascript" src="./js/src/class.js"></script>
+    <script type="text/javascript" src="./js/src/index.js"></script>
+    <script type="text/javascript" src="./js/src/functions.js"></script>
   </html>
   
