--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title class="game-title">Hell de Janeiro</title>
   </head>
   <body>
-      
     <h1 class="game-title">Hell de Janeiro</h1>
 
     <section class="story-container">
@@ -20,13 +19,13 @@
       <div id="main-text" class="decision-text-container"></div>
       <div id="buttons-container" class="choice-buttons-container">
         <button id="single-choice-button" class="choice-buttons">
-          Start Game!
+          Partiu!
         </button>
       </div>
     </section>
   </body>
     <script type="text/javascript" src="./js/src/class.js"></script>
-    <script type="text/javascript" src="./js/src/index.js"></script>
+    <script type="text/javascript" src="./js/src/array.js"></script>
     <script type="text/javascript" src="./js/src/functions.js"></script>
   </html>
   
