--- a/index.html
+++ b/index.html
@@ -12,16 +12,37 @@
     <section class="story-container">
       <div class="status-container">
         <ul>
-          <li id="savings"></li>
-          <li id="health"></li>
+          <!-- <li id="savings"></li> -->
         </ul>
       </div>
       <div id="main-text" class="decision-text-container"></div>
+      <div id="main-dice"></div>
       <div id="buttons-container" class="choice-buttons-container">
         <button id="single-choice-button" class="choice-buttons">
           Partiu!
         </button>
       </div>
+    </section>
+    <div><p id="savings"></div>
+
+    <section>
+      <table>
+        <tr>
+            <td class="newpiece" id="5">5</td> <td class="newpiece" id="6">6</td> <td class="newpiece" id="7">7</td> <td class="blank"></td> <td class="newpiece" id="17">17</td> <td class="newpiece" id="18">18</td> <td class="newpiece" id="19">19</td> <td class="blank"></td> <td class="newpiece" id="Fim">FIM</td>
+        </tr>
+        <tr>
+            <td class="newpiece" id="4">4</td> <td class="blank"></td> <td class="newpiece" id="8">8</td> <td class="blank"></td> <td class="newpiece" id="16">16</td> <td class="blank"></td> <td class="newpiece" id="20">20</td> <td class="blank"></td> <td class="newpiece" id="28">28</td>
+        </tr>
+        <tr>
+            <td class="newpiece" id="3">3</td> <td class="blank"></td> <td class="newpiece" id="9">9</td> <td class="blank"></td> <td class="newpiece" id="15">15</td> <td class="blank"></td> <td class="newpiece" id="21">21</td> <td class="blank"></td> <td class="newpiece" id="27">27</td>
+        </tr>
+        <tr>
+            <td class="newpiece" id="2">2</td> <td class="blank"></td> <td class="newpiece" id="10">10</td> <td class="blank"></td> <td class="newpiece" id="14">14</td> <td class="blank"></td> <td class="newpiece" id="22">22</td> <td class="blank"></td> <td class="newpiece" id="26">26</td>
+        </tr>
+        <tr>
+            <td class="piece" id="1">1</td> <td class="blank"></td> <td class="newpiece" id="11">11</td> <td class="newpiece" id="12">12</td> <td class="newpiece" id="13">13</td> <td class="blank"></td> <td class="newpiece" id="23">23</td> <td class="newpiece" id="24">24</td> <td class="newpiece" id="25">25</td>
+        </tr>
+    </table>
     </section>
   </body>
     <script type="text/javascript" src="./js/src/class.js"></script>
