--- a/teste.html
+++ b/teste.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/teste.css" />
-    <title>Document</title>
-</head>
-<body>
-    <table>
-        <tr>
-            <td>5</td> <td>6</td> <td>7</td> <td class="blank"></td> <td>17</td> <td>18</td> <td>19</td> <td class="blank"></td> <td>FIM</td>
-        </tr>
-        <tr>
-            <td>4</td> <td class="blank"></td> <td>8</td> <td class="blank"></td> <td>16</td> <td class="blank"></td> <td>20</td> <td class="blank"></td> <td>28</td>
-        </tr>
-        <tr>
-            <td>3</td> <td class="blank"></td> <td>9</td> <td class="blank"></td> <td>15</td> <td class="blank"></td> <td>21</td> <td class="blank"></td> <td>27</td>
-        </tr>
-        <tr>
-            <td>2</td> <td class="blank"></td> <td>10</td> <td class="blank"></td> <td>14</td> <td class="blank"></td> <td>22</td> <td class="blank"></td> <td>26</td>
-        </tr>
-        <tr>
-            <td class="piece" id="1">1</td> <td class="blank"></td> <td>11</td> <td>12</td> <td>13</td> <td class="blank"></td> <td>23</td> <td>24</td> <td>25</td>
-        </tr>
-    </table>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style2.css" />
+    <title class="game-title">Hell de Janeiro</title>
+  </head>
+  <body>
+    <h1 class="game-title">Hell de Janeiro</h1>
+
+    <section class="story-container">
+      <div class="status-container">
+        <ul>
+          <li id="health"></li>
+          <li id="savings"></li>
+        </ul>
+      </div>
+      <div id="main-text" class="decision-text-container"></div>
+      <div id="buttons-container" class="choice-buttons-container">
+        <button id="single-choice-button" class="choice-buttons">
+          Start Game!
+        </button>
+      </div>
+      <div id="input-text-holder" class="form__group"></div>
+    </section>
+
+  </body>
+  <script type="text/javascript" src="./js/src/array2.js"></script>
+  <script type="text/javascript" src="./js/src/class2.js"></script>
+  <script type="text/javascript" src="./js/src/function2.js"></script>
 </html>
