--- a/index2.html
+++ b/index2.html
@@ -10,12 +10,15 @@
     <h1 class="game-title">Hell de Janeiro</h1>
 
     <section class="game-attributes">
+      <div><p id="health" class="health"></div>
       <div><p id="savings" class="savings"></div>
     </section>
+
     <section class="story-container">
       <div class="status-container">
         <ul>
-          
+          <!-- <li id="savings"></li>
+          <li id="health"></li> -->
         </ul>
       </div>
       <div id="main-text" class="decision-text-container"></div>
@@ -26,12 +29,10 @@
         </button>
       </div>
     </section>
-    <div><p id="savings"></div>
-
     <section>
-      <table>
+      <table class="board">
         <tr>
-            <td class="newpiece" id="5">5</td> <td class="newpiece" id="6">6</td> <td class="newpiece" id="7">7</td> <td class="blank"></td> <td class="newpiece" id="17">17</td> <td class="newpiece" id="18">18</td> <td class="newpiece" id="19">19</td> <td class="blank"></td> <td class="newpiece" id="29">29</td><td class="newpiece" id="30">30</td><td class="newpiece" id="31">FIM</td>
+            <td class="newpiece" id="5">5</td> <td class="newpiece" id="6">6</td> <td class="newpiece" id="7">7</td> <td class="blank"></td> <td class="newpiece" id="17">17</td> <td class="newpiece" id="18">18</td> <td class="newpiece" id="19">19</td> <td class="blank"></td> <td class="newpiece" id="Fim">FIM</td>
         </tr>
         <tr>
             <td class="newpiece" id="4">4</td> <td class="blank"></td> <td class="newpiece" id="8">8</td> <td class="blank"></td> <td class="newpiece" id="16">16</td> <td class="blank"></td> <td class="newpiece" id="20">20</td> <td class="blank"></td> <td class="newpiece" id="28">28</td>
@@ -48,10 +49,7 @@
     </table>
     </section>
   </body>
-    <script type="text/javascript" src="./js/src/class.js"></script>
-    <script type="text/javascript" src="./js/src/array.js"></script>
-    <script type="text/javascript" src="./js/src/functions.js"></script>
+    <script type="text/javascript" src="./js/src/array2.js"></script>
+    <script type="text/javascript" src="./js/src/class2.js"></script>
+    <script type="text/javascript" src="./js/src/functions2.js"></script>
   </html>
-  
-
-   
