--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
     <section>
       <table class="board">
         <tr>
-            <td class="newpiece" id="5">5</td> <td class="newpiece" id="6">6</td> <td class="newpiece" id="7">7</td> <td class="blank"></td> <td class="newpiece" id="17">17</td> <td class="newpiece" id="18">18</td> <td class="newpiece" id="19">19</td> <td class="blank"></td> <td class="newpiece" id="Fim">FIM</td>
+            <td class="newpiece" id="5">5</td> <td class="newpiece" id="6">6</td> <td class="newpiece" id="7">7</td> <td class="blank"></td> <td class="newpiece" id="17">17</td> <td class="newpiece" id="18">18</td> <td class="newpiece" id="19">19</td> <td class="blank"></td> <td class="newpiece" id="29">29</td> <td class="newpiece" id="30">30</td> <td class="newpiece" id="Fim">FIM</td>
         </tr>
         <tr>
             <td class="newpiece" id="4">4</td> <td class="blank"></td> <td class="newpiece" id="8">8</td> <td class="blank"></td> <td class="newpiece" id="16">16</td> <td class="blank"></td> <td class="newpiece" id="20">20</td> <td class="blank"></td> <td class="newpiece" id="28">28</td>
