--- a/index3.html
+++ b/index3.html
@@ -7,18 +7,17 @@
     <title class="game-title">Hell de Janeiro</title>
   </head>
   <body>
+    <br>
+    <br>
     <h1 class="game-title">Hell de Janeiro</h1>
 
     <section class="game-attributes">
-      <div><p id="health" class="health"></div>
       <div><p id="savings" class="savings"></div>
     </section>
-
     <section class="story-container">
       <div class="status-container">
         <ul>
-          <!-- <li id="savings"></li>
-          <li id="health"></li> -->
+          
         </ul>
       </div>
       <div id="main-text" class="decision-text-container"></div>
@@ -29,10 +28,12 @@
         </button>
       </div>
     </section>
+    <div><p id="savings"></div>
+
     <section>
-      <table class="board">
+      <table>
         <tr>
-            <td class="newpiece" id="5">5</td> <td class="newpiece" id="6">6</td> <td class="newpiece" id="7">7</td> <td class="blank"></td> <td class="newpiece" id="17">17</td> <td class="newpiece" id="18">18</td> <td class="newpiece" id="19">19</td> <td class="blank"></td> <td class="newpiece" id="29">29</td> <td class="newpiece" id="30">30</td> <td class="newpiece" id="Fim">FIM</td>
+            <td class="newpiece" id="5">5</td> <td class="newpiece" id="6">6</td> <td class="newpiece" id="7">7</td> <td class="blank"></td> <td class="newpiece" id="17">17</td> <td class="newpiece" id="18">18</td> <td class="newpiece" id="19">19</td> <td class="blank"></td> <td class="newpiece" id="29">29</td><td class="newpiece" id="30">30</td><td class="newpiece" id="31">FIM</td>
         </tr>
         <tr>
             <td class="newpiece" id="4">4</td> <td class="blank"></td> <td class="newpiece" id="8">8</td> <td class="blank"></td> <td class="newpiece" id="16">16</td> <td class="blank"></td> <td class="newpiece" id="20">20</td> <td class="blank"></td> <td class="newpiece" id="28">28</td>
@@ -49,7 +50,10 @@
     </table>
     </section>
   </body>
-    <script type="text/javascript" src="./js/src/array2.js"></script>
-    <script type="text/javascript" src="./js/src/class2.js"></script>
-    <script type="text/javascript" src="./js/src/functions2.js"></script>
+    <script type="text/javascript" src="./js/src/class.js"></script>
+    <script type="text/javascript" src="./js/src/array.js"></script>
+    <script type="text/javascript" src="./js/src/functions.js"></script>
   </html>
+  
+
+   
